[package]
name = "spnhub"
version = "0.97.19"
edition = "2024"

[dependencies]
arc-swap = "1.7"
bollard = "0.21"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
quinn = "0.11"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
x509-parser = "0.18"
