[package]
name = "spnhub"
version = "0.98.3"
edition = "2024"

[dependencies]
arc-swap = "1.9"
bollard = "0.21"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
k8s-openapi = { version = "0.27", features = ["v1_35"] }
kube = { version = "3", features = ["runtime", "derive"] }
quinn = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
webpki-roots = "1"
x509-parser = "0.18"
